--- a/src/component/ReportHeader/reportHeader.css
+++ b/src/component/ReportHeader/reportHeader.css
@@ -20,8 +20,8 @@
 }
 
 .report__web-icon img {
+    width: 50%;
     position: absolute;
-    max-width: 24px;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
@@ -78,6 +78,12 @@
     box-sizing: border-box;
     box-shadow: 0 4px 10px 0 rgba(14,30,62,0.08);
     transition: all .15s ease;
+}
+
+@media screen and (max-width: 540px) {
+    .download-button span{
+        display: none;
+    }
 }
 
 .download-button img {
