--- a/src/component/ErrorPopup/errorPopup.css
+++ b/src/component/ErrorPopup/errorPopup.css
@@ -1,15 +1,31 @@
 .error__msg {
     position: absolute;
     right: 10px;
-    top: 10px;
+    top: 40px;
 
     background-color: rgba(255, 0, 0, 0.718);
     color: white;
     max-width: 200px;
     padding: 10px 20px;
     border-radius: 5px;
+
+    animation: fadeOut 5.1s ease-in-out;
 }
 
 .msg__text {
     margin: 0;
 }
+@keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    25% {
+      opacity: 1;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+  }
