--- a/src/component/ReportDataCards/reportDataCards.css
+++ b/src/component/ReportDataCards/reportDataCards.css
@@ -22,11 +22,6 @@
 }
 
 
-.circular-progress-bar {
-    max-width: 150px;
-}
-
-
 .report__data--container {
     display: flex;
     flex-direction: column;
@@ -37,101 +32,15 @@
     align-items: center;
 }
 
-.report__review--img {
-    max-width: 350px;
-}
-
-.report--seo-score--title {
-    margin-bottom: 20px;
-    text-align: center;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 24px;
-}
-
-.report--seo-score--desc {
-    text-align: center;
-    margin-top: auto
-}
-
-.report--preview {
-    /* -webkit-box-flex: 1; */
-    flex: 1 1 100%;
-    max-width: 50%;
-    max-height: 100%;
-    box-sizing: border-box;
-}
-
-.report__data--title {
-    font-weight: 700;
-    font-size: 20px;
-    margin: 0;
-}
-
-.report__data--aditional-info {
-    text-align: center;
-    font-weight: 500;
-    margin-top: auto;
-}
-
-.report__data--aditional-info span {
-    font-weight: 700;
-}
-
-.recharts-responsive-container {
-    height: 200px  !important;
-    width: 100% !important;
-}
-
-.report__analysis--radar{
-    font-size: 10px;
-}
-
-.report__analysis--title {
-    font-weight: 700;
-    font-size: 20px;
-}
 
 
 
-.report__seo--percentage-info {
-    height: 35px;
-    width: 50%;
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    justify-content: space-around;
-}
 
-.indicator {
-    position: relative;
-    font-size: 10px;
-}
-
-.indicator::before {
-    display: inline-block;
-    content: '';
-    width: 20px;
-    height: 8px;
-    margin: 0 10px;
-    background-color: red;
-}
-
-.green__indicator::before {
-    background-color: green;
-}
-
-.yellow__indicator::before {
-    background-color: yellow;
-}
-
-.orange__indicator::before {
-    background-color: orange;
-}
 
 
 
 @media screen and (max-width: 1200px) {
-    .report--analysis {
+    .report__analysis {
         display: none;
     }
 }
@@ -140,7 +49,7 @@
     .report__data--content {
         flex-wrap: wrap;
     }
-    .report--preview {
+    .report__preview {
         flex: 1;
     }
 }
@@ -150,8 +59,8 @@
     .report-container {
         width: 70%
     }
-    .report--preview {
-        max-width: 100%;
+    .report__preview {
+        max-width: 100% !important;
     }
 }
 
