--- a/src/component/ReportHeader/reportHeader.css
+++ b/src/component/ReportHeader/reportHeader.css
@@ -19,8 +19,14 @@
     background: #FFFFFF;
 }
 
+.skeleton--img {
+    height: 50%;
+}
+
+
 .report__web-icon img {
     width: 50%;
+    height: 50%;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -28,6 +34,7 @@
 }
 
 .report__web-text {
+    min-width: 150px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
