--- a/src/component/ProgressBar/linearProgressBar.css
+++ b/src/component/ProgressBar/linearProgressBar.css
@@ -22,6 +22,7 @@
     bottom: -12px;
     width: 2px;
     background-color: rgb(0, 0, 0); 
+    transition: all 0.7s ease-in-out;
     content: '';
   }
   
