--- a/src/component/Header/header.css
+++ b/src/component/Header/header.css
@@ -1,6 +1,6 @@
-.input__component--wrapper {
+.header__wrapper {
     box-sizing: border-box;
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     top: 0;
     left: 0;
@@ -10,13 +10,25 @@
     box-shadow: 0px 6px 30px rgba(14, 30, 62, 0.08);
 }
 
-.input__component--container {
+.header__container {
     justify-content: right;
     max-height: 30px;
     display: flex;
     column-gap: 10px;
     max-width: 1250px;
     margin: 0 auto;
+}
+
+.header__title {
+    width: 150px;
+    font-weight: 700;
+    color: #0d6efd;
+    font-size: 22px;
+    margin-right: auto;
+}
+
+.header__title:hover {
+    cursor: pointer;
 }
 
 .input__component--form {
@@ -41,4 +53,16 @@
     min-width: 10px;
 }
 
+
+@media screen and (max-width: 560px) {
+    .header__title span {
+        font-size: 10px;
+    }
+    .header__title {
+        line-height: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
 
