--- a/src/component/ReportDataCards/reportDataCards.css
+++ b/src/component/ReportDataCards/reportDataCards.css
@@ -61,6 +61,9 @@
 }
 
 @media screen and (max-width: 680px) {
+    .report__data--wrapper {
+        min-width: 0;
+    }
     .report-container {
         width: 100%
     }
