--- a/src/component/ErrorPopup/errorPopup.css
+++ b/src/component/ErrorPopup/errorPopup.css
@@ -2,6 +2,7 @@
     position: absolute;
     right: 10px;
     top: 40px;
+    z-index: 10;
 
     background-color: rgba(255, 0, 0, 0.718);
     color: white;
